solutions/gatekeeper-policies/aw-pbmm-services/constraint.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#########
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: PbmmServices
metadata:
  name: pbmmservices
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
  parameters:
    allowedServices:
      - gkehub.cnrm.cloud.google.com/v1beta1
      - logging.cnrm.cloud.google.com/v1beta1
      - artifactregistry.cnrm.cloud.google.com/v1beta1
      - compute.cnrm.cloud.google.com/v1beta1
      - bigquery.cnrm.cloud.google.com/v1beta1
      - iam.cnrm.cloud.google.com/v1beta1
      - accesscontextmanager.cnrm.cloud.google.com/v1beta1
      - kms.cnrm.cloud.google.com/v1beta1
      - dataproc.cnrm.cloud.google.com/v1beta1
      - vpcaccess.cnrm.cloud.google.com/v1beta1
      - storage.cnrm.cloud.google.com/v1beta1
      - container.cnrm.cloud.google.com/v1beta1
      - servicedirectory.cnrm.cloud.google.com/v1beta1
      - resourcemanager.cnrm.cloud.google.com/v1beta1
      - dataflow.cnrm.cloud.google.com/v1beta1
      - sql.cnrm.cloud.google.com/v1beta1
      - artifactregistry.cnrm.cloud.google.com/v1beta1
      - bigtable.cnrm.cloud.google.com/v1beta1
      - dns.cnrm.cloud.google.com/v1beta1
      - firestore.cnrm.cloud.google.com/v1beta1
      - iap.cnrm.cloud.google.com/v1beta1
      - monitoring.cnrm.cloud.google.com/v1beta1
      - networkconnectivity.cnrm.cloud.google.com/v1beta1
      - pubsub.cnrm.cloud.google.com/v1beta1
      - run.cnrm.cloud.google.com/v1beta1
    allowedapis:
      - resourcesettings.googleapis.com
      - bigquery.googleapis.com
      - compute.googleapis.com
      - logging.googleapis.com
      - iam.googleapis.com
      - accesscontextmanager.googleapis.com
      - cloudkms.googleapis.com
      - dataproc.googleapis.com
      - vpcaccess.googleapis.com
      - storage.googleapis.com
      - container.googleapis.com
      - servicedirectory.googleapis.com
      - cloudresourcemanager.googleapis.com
      - dataflow.googleapis.com
      - sqladmin.googleapis.com
      - artifactregistry.googleapis.com
      - bigtable.googleapis.com
      - bigtableadmin.googleapis.com
      - dns.googleapis.com
      - firestore.googleapis.com
      - iap.googleapis.com
      - monitoring.googleapis.com
      - networkconnectivity.googleapis.com
      - pubsub.googleapis.com
      - run.googleapis.com
