solutions/gatekeeper-policies/aw-pbmm-services/tests/service.yaml
apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
kind: Service
metadata: 
  name: service
  namespace: config-control
  annotations:
    config.kubernetes.io/local-config: 'true'
spec:
  resourceID: build.googleapis.com
